--- a/index.html
+++ b/index.html
@@ -1,42 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>Магазин товаров для дома</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
+    <title>Портфолио Junior верстальщика</title>
   </head>
+
   <body>
-    <header class="site-header">
-      <div class="container">
-        <h1>Gloevk</h1>
-        <p>Разнообразные товары для дома с доставкой по всей планете</p>
-        <img src="img/gloevk-examples.png" width="510" height="80" alt="Примеры интерьеров">
-      </div>
+    <header class="page-header">
+	<div class="container">
+		Tiamatra<br>
+		<a href="mailto:vilen.777@mail.ru" class="header-email">vilen.777@mail.ru<br></a>
+		<a href="tel:+79200726677" class="header-phone">8-920-072-66-77<br></a>
+	</div>
     </header>
 
-    <section class="features">
-      <h2>Что поможет вам создать домашний уют?</h2>
-      <p class="feature-furniture">Мебель и фурнитура</p>
-      <p class="feature-lighting">Лампы и торшеры</p>
-      <p class="feature-accessories">Аксессуары и мелочи</p>
+    <section class="hero-image">
+	<div class="container">
+      		<h1 class="heading">Tiamatra</h1>
+      		<p>Junior верстальщик</p>
+	</div>
     </section>
 
-    <section class="advantages">
-      <h2>Что выделяет нас среди конкурентов?</h2>
-      <ul class="advantages-list">
-        <li class="advantages-item">Используем только природные материалы</li>
-        <li class="advantages-item standard">Ежедневные отчёты о ходе работ</li>
-        <li class="advantages-item standard">Сами соберём мебель для вас</li>
-        <li class="advantages-item vip">Бесплатное гарантийное обслуживание в течение 10 лет</li>
-        <li class="advantages-item vip">Доставка в день заказа</li>
-      </ul>
-    </section>
-
-    <footer class="site-footer">
+    <section class="intro">
       <div class="container">
-        <p>© Кекс, 2020</p>
-        <p>Магазин товаров для дома</p>
-      </div>
+	<h2 class="subheading">Давайте познакомимся</h2>
+	<figure class="user-image">
+		<img src="files/user_me.jpg" width="350" alt="Фотография Tiamatra">
+	</figure>
+      <h3>Пара слов о себе</h3>
+      <p>Люблю компьютерные игры и животных.</p>
+      <h3>Чем могу быть полезен</h3>
+      <p>Неплохо разбираюсь в экзотических питомцах, особенно в рептилиях и членистоногих.
+Недавно начала изучать вёрстку, довольно увлекательное занятие.</p>
+	</div>
+    </section>
+
+    <section class="portfolio">
+	<div class="container">
+      <h2 class="subheading">Мои работы</h2>
+	<figure class="project-image">
+		<img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+	</figure>
+      <h3>Магазин товаров для дома</h3>
+      <p>Мой первый сайт.</p>
+	<a class="button" href="source/project-gloevk/index.html">Открыть страницу</a>
+
+      <h3>Блог начинающего верстальщика</h3>
+      <p>Статический блог про обучение HTML и CSS.</p>
+	</div>
+    </section>
+
+    <footer class="page-footer">
+	<div class="container">
+	Tiamatra<br>
+	<a href="mailto:vilen.777@mail.ru" class="footer-email">vilen.777@mail.ru<br></a>
+	<a href="tel:+79200726677" class="footer-phone">8-920-072-66-77<br></a>
+	</div>
     </footer>
   </body>
 </html>
