--- a/index.html
+++ b/index.html
@@ -27,13 +27,26 @@
       <div class="container">
 	<h2 class="subheading">Давайте познакомимся</h2>
 	<figure class="user-image">
-		<img src="files/user_me.jpg" width="350" alt="Фотография Tiamatra">
+		<img class="me-image" src="files/user_me.jpg" width="350" alt="Фотография Tiamatra">
 	</figure>
-      <h3>Пара слов о себе</h3>
+      <div>
+	<h3>Пара слов о себе</h3>
       <p>Люблю компьютерные игры и животных.</p>
+	</div>
+	<div>
       <h3>Чем могу быть полезен</h3>
       <p>Неплохо разбираюсь в экзотических питомцах, особенно в рептилиях и членистоногих.
 Недавно начала изучать вёрстку, довольно увлекательное занятие.</p>
+	</div>
+	<div class="skills">
+	<h3>Мои навыки</h3>
+	<dl class="skills-list">
+		<dt class="skill-html">HTML</dt>
+		<dd class="level"><div style="width: 60%;">60%</div></dd>
+		<dt class="skill-css">CSS</dt>
+		<dd class="level"><div style="width: 40%;">40%</div></dd>
+	</dl>
+	</div>
 	</div>
     </section>
 
